# fireplace-rs

./: Cargo.toml  Makefile
config/: fireplace-rs.service
src/: controllers.rs  lib.rs  main.rs  server.rs  views.rs
static/: fireplace.js  index.html
