[package]
name = "fireplace_rs"
version = "0.1.0"
authors = ["Benjamin Goldberg <ben@spothero.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-files = "0.2"
actix-web = "2.0"
actix-rt = "1.0"
clap = "2.33"
listenfd = "0.3"
serde = "1.0"
serde_derive = "1.0"
sysfs_gpio = "0.5"
